<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:title="@string/home_page" />
        <item
            android:id="@+id/why_use"
            android:title="@string/why_use" />
        <item
            android:id="@+id/help"
            android:title="@string/help" />
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/order_details"
            android:title="@string/order_details" />

        <item
            android:id="@+id/settings"
            android:title="@string/setting" />
    </group>

    <item android:title="Կապ">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
