<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/basket_fragment"
    android:background="#FFE0B2">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/basket_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="78">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/re"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_gravity="bottom"
        android:layout_weight="22"
        android:paddingRight="@dimen/basket_padding"
        android:paddingBottom="@dimen/basket_padding"
        android:paddingLeft="@dimen/basket_padding"
        android:background="#FFC057">

        <TextView
            android:id="@+id/foodTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yndameny_label"
            android:textSize="@dimen/food_total_price_text_size"
            android:textColor="#303841"/>
        <TextView
            android:id="@+id/araqumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/araqum_label"
            android:textSize="@dimen/food_total_price_text_size"
            android:layout_below="@id/foodTotalText"
            android:textColor="#303841"/>
        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_total"
            android:layout_below="@id/araqumText"
            android:textSize="@dimen/food_total_price_text_size"
            android:textColor="#303841"/>
        <Button
            android:minWidth="@dimen/basket_continue_button_width"
            android:height="@dimen/basket_continue_button_height"
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/button_continue"
            android:theme="@style/BtnStyle"
            android:textColor="#303841"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </RelativeLayout>

</LinearLayout>