<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.orange_team.narinjapp.fragments.WhyUsePageFragment"
    android:id="@+id/fragment_why_use_page">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <TextView
            android:text="@string/why_use_title"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/why_use_title"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_pages_title_size"
            android:contentDescription="@string/why_use"/>

        <ImageView
            android:layout_width="@dimen/splash_logo_letters_size"
            android:layout_height="@dimen/splash_logo_letters_size"
            android:src="@drawable/appleicon"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/why_use"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/why_use_title1"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_subtitle_size"
            android:contentDescription="@string/why_use"/>

        <TextView
            android:text="@string/why_use_page_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_one"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_text_size"
            android:contentDescription="@string/why_use_page_text1"/>

        <ImageView
            android:layout_width="@dimen/splash_logo_letters_size"
            android:layout_height="@dimen/splash_logo_letters_size"
            android:src="@drawable/cookicon"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/why_use"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/why_use_title2"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_subtitle_size"
            android:contentDescription="@string/why_use"/>


        <TextView
            android:text="@string/why_use_page_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_two"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_text_size"
            android:contentDescription="@string/why_use_page_text2"/>

        <ImageView
            android:layout_width="@dimen/splash_logo_letters_size"
            android:layout_height="@dimen/splash_logo_letters_size"
            android:src="@drawable/dishicon"
            android:layout_gravity="center" />
        <TextView
            android:text="@string/why_use"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/why_use_title3"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_subtitle_size"
            android:contentDescription="@string/why_use"/>

        <TextView
            android:text="@string/why_use_page_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_three"
            android:gravity="center"
            android:textSize="@dimen/secondary_fragment_page_text_size"
            android:contentDescription="@string/why_use_page_text3"/>
    </LinearLayout>
</ScrollView>
