<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/order_details_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_items"
        android:paddingLeft="@dimen/basket_padding"
        android:paddingRight="@dimen/basket_padding"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textSize="@dimen/personal_data_text_size"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment"
                android:inputType="text"
                android:textSize="@dimen/personal_data_text_size"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/masked_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint=   "@string/hint_phone_number"
                app:mask="+374 (**) **-**-**"
                app:notMaskedSymbol="*"
                app:maskIconColor="@color/colorPrimary"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:textSize="@dimen/personal_data_text_size"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/basket_padding"

            >

            <Button
                android:id="@+id/toOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="To order"
                android:theme="@style/BtnStyle"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <!--app:maskIcon="@drawable/abc_ic_clear_mtrl_alpha"-->
        </RelativeLayout>



    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>